# Pozisyon-Korumali-Drone

./: README.md  esp_drone_control.html  sdkconfig  sdkconfig.defaults
components/config/include/: config.h
components/core/crazyflie/: CMakeLists.txt
components/core/crazyflie/hal/interface/: eskylink.h  espnow_ctrl.h  freeRTOSdebug.h  imu.h  imu_types.h  ledseq.h  pm.h  pm_esplane.h  sensors.h  sensors_mpu9250_lps25h.h  usec_time.h  wifilink.h
components/core/crazyflie/hal/src/: espnow_ctrl.c  freeRTOSdebug.c  ledseq.c  pm_esplane.c  sensors.c  sensors_mpu9250_lps25h.c  usec_time.c  wifilink.c
components/core/crazyflie/modules/interface/: app.h  app_channel.h  attitude_controller.h  comm.h  commander.h  console.h  controller.h  controller_indi.h  controller_mellinger.h  controller_pid.h  crtp.h  crtp_commander.h  crtp_localization_service.h  crtpservice.h  estimator.h  estimator_complementary.h  estimator_kalman.h  info.h  kalman_core.h  kalman_supervisor.h  log.h  math3d.h  mem.h  outlierFilter.h  param.h  pid.h  platformservice.h  position_controller.h  position_controller_indi.h  position_estimator.h  power_distribution.h  quatcompress.h  queuemonitor.h  range.h  sensfusion6.h  stabilizer.h  stabilizer_types.h  static_mem.h  sysload.h  system.h  (+2 more)
components/core/crazyflie/modules/src/: app_channel.c  app_handler.c  attitude_pid_controller.c  comm.c  commander.c  console.c  controller.c  controller_indi.c  controller_mellinger.c  controller_pid.c  crtp.c  crtp_commander.c  crtp_commander_generic.c  crtp_commander_rpyt.c  crtp_localization_service.c  crtpservice.c  estimator.c  estimator_complementary.c  estimator_kalman.c  info.c  kalman_core.c  kalman_supervisor.c  log.c  mem.c  outlierFilter.c  param.c  pid.c  platformservice.c  position_controller_indi.c  position_controller_pid.c  position_estimator_altitude.c  power_distribution_stock.c  queuemonitor.c  range.c  sensfusion6.c  stabilizer.c  static_mem.c  sysload.c  system.c  trigger.c  (+1 more)
components/core/crazyflie/utils/interface/: cf_math.h  cfassert.h  configblock.h  cpuid.h  crc.h  debug_cf.h  eprintf.h  filter.h  num.h  physicalConstants.h  pid_nvs.h  rateSupervisor.h  sleepus.h  statsCnt.h  test_support.h  version.h
components/core/crazyflie/utils/src/: FreeRTOS-openocd.c  abort.c  cfassert.c  configblock.c  cpuid.c  crc.c  debug_cf.c  eprintf.c  filter.c  num.c  pid_nvs.c  rateSupervisor.c  sleepus.c  statsCnt.c  version.c
components/drivers/deck/: deck_digital.c  deck_spi.c
components/drivers/deck/include/: deck_digital.h  deck_spi.h
components/drivers/general/adc/: adc_esp32.c
components/drivers/general/led/: led_esp32.c
components/drivers/general/motors/: motors.c  motors_def_cf2.c
components/drivers/general/web_server/: CMakeLists.txt  web_server.c
components/drivers/general/wifi/: wifi_esp32.c
components/drivers/i2c_bus/: i2c_drv.c  i2cdev_esp32.c
components/drivers/i2c_bus/include/: i2c_drv.h  i2cdev.h
components/drivers/i2c_devices/ak8963/: CMakeLists.txt  ak8963.c
components/drivers/i2c_devices/mpu6500/: CMakeLists.txt  mpu6500.c
components/drivers/i2c_devices/vl53l1/: vl53l1x.c  zranger2.c
components/drivers/spi_devices/pmw3901/: flowdeck_v1v2.c  pmw3901.c
components/lib/dsp_lib/BasicMathFunctions/: xtensa_abs_f32.c  xtensa_add_f32.c  xtensa_dot_prod_f32.c  xtensa_mult_f32.c  xtensa_negate_f32.c  xtensa_offset_f32.c  xtensa_scale_f32.c  xtensa_sub_f32.c
components/lib/dsp_lib/CommonTables/: xtensa_common_tables.c  xtensa_const_structs.c
components/lib/dsp_lib/ComplexMathFunctions/: xtensa_cmplx_conj_f32.c  xtensa_cmplx_dot_prod_f32.c  xtensa_cmplx_mag_f32.c  xtensa_cmplx_mag_squared_f32.c  xtensa_cmplx_mult_cmplx_f32.c  xtensa_cmplx_mult_real_f32.c
components/lib/dsp_lib/ControllerFunctions/: xtensa_pid_init_f32.c  xtensa_pid_reset_f32.c  xtensa_sin_cos_f32.c
components/platform/: platform.c  platform.h  platform_cf2.c  platform_esp32.c  stm32_legacy.h
main/: Kconfig.projbuild
(+111 files in other folders)
